--- a/index.html
+++ b/index.html
@@ -1,1 +1,265 @@
-Hello World
+<!DOCTYPE html>
+<!--be sure to insert a breakpoint at 940 pixels plz  -->
+<html class="tylerwatson">
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>tylercwats</title>
+    <meta name="fragment" content="!">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel='shortcut icon' type='image/x-icon' href='img/tylercwats-12.png'>
+    <!-- INCLUDING JQUERY BEFORE SCRIPT -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://player.vimeo.com/api/player.js"></script>
+    <script src="js/main.js"></script>
+    <!-- <link rel="stylesheet" href="animate.min.css"> -->
+    <meta property="og:title" content="Tyler Watson Portfolio">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://tylerwatson.design">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+</head>
+
+<body data-gr-c-s-loaded="true" data-pinterest-extension-installed="cr2.0.5">
+    <style>
+        body,
+        html {
+            padding: 0;
+            margin: 0;
+        }
+    </style>
+    <div id="container" class="desktop">
+      <div id="idAbout" class="w3-modal w3-animate-opacity">
+          <div class="w3-modal-content w3-card-8">
+              <div class="w3-container w3-teal">
+                  <div class="right-side">
+                      <span class="w3-closebtn animate-opacity-close">&times;</span>
+                      <div class="project-description">
+                          <h1>TYLER WATSON</h1>
+                          <p>I believe that design makes the world a better place.
+                            Visuals are capable of transcending culutures and language barriers.
+                            That's why I create- to communicate.<br><br>
+                            Currently I'm a student at Brigham Young University studying Graphic Design and Minoring in Computer Science.
+                            I also work for a local non-profit where I see my designs indirectly help people's lives.
+                            When I'm not drawing or pushing buttons in front of a screen I'm traveling or snowboarding.
+                            <br><br>
+                            All of the illustrations, animations, designs, and even the code of this website was done by myself.
+                            Thank you for looking.
+                      </div>
+                  </div>
+                  <!--style.display=none is the abrupt change in opacity that needs fixed -->
+                  <div class="about content">
+                      <img src="img/me.png">
+                  </div>
+              </div>
+          </div>
+      </div>
+        <div id="idEET" class="w3-modal w3-animate-opacity">
+            <div class="w3-modal-content w3-card-8">
+                <div class="w3-container w3-teal">
+                  <div class="right-side">
+                    <span class="w3-closebtn animate-opacity-close">&times;</span>
+                    <div class="project-description"><h1>RELEASING TOMORROW</h1>
+                        If you're seeing this, come back tomorrow to see this project complete please.
+                        I'm working really hard to get my app complete.
+                    </div>
+                  </div>
+                    <!--style.display=none is the abrupt change in opacity that needs fixed -->
+                </div>
+            </div>
+        </div>
+        <div id="idHS" class="w3-modal w3-animate-opacity">
+          <div class="w3-modal-content w3-card-8">
+              <div class="w3-container w3-teal">
+                <div class="right-side">
+                  <span class="w3-closebtn animate-opacity-close">&times;</span>
+                  <div class="project-description"><h1>HIGHSNOBIETY <br>REDESIGN</h1>
+                    <p>Highsnobiety resonates with me as a magazine because of the ecletic, and progressive culture that the magazine embodies.
+                      I wanted to capture and maintain the written aesthetic by creating a compelling design to compliment the content.
+                      <br><br>
+                      I began by refreshing the logo. The current logo is a symbolic representation of a wax seal with a striking crown placed in the center.
+                      The crown exhibited merit, and so it was kept. The wax profile was removed and the middle inverted. The mark was reduced to a clean, easy to read symbol that
+                      preserves the iconic character of the original.
+                      <br><br>
+                      Iterations upon iterations of the word mark in conjunction with the logo were the next steps taken. I initially explored blackletter style fonts.
+                      Highsnobiety is a European publication out of Germany and it seemed fitting to pay homage to the countries creation of that style. I even considered
+                      creating a custom contemporary Fraktur-styled masthead. After consulting my professor and exploring a variety of fonts including serif and sans-serifed fonts
+                      I chose a Requium, a font that "celebrates Renaissance humanism", to portray the brand as traditional, and yet high class.
+                  </div>
+                </div>
+                  <!--style.display=none is the abrupt change in opacity that needs fixed -->
+                  <div class="books content">
+                    <img src="img/backgroundmag.png">
+                    <img src="img/content.png">
+                    <img src="img/spread1.png">
+                    <img src="img/spread2.png" alt="spread2">
+                    <img src="img/spread3.png" alt="spread3">
+                    <div class='comps'>
+                      <span class="Vtitle">PROCESS</span>
+                      <span><p>Logo refresh</p></span>
+                      <img src="img/process1.png" alt="thumbnails">
+                      <span><p>Masthead explorations</p></span>
+                      <img src="img/process2.png" alt="thumbnails">
+                      <span><p>Layout explorations</p></span>
+                      <img src="img/process3.png" alt="thumbnails">
+                    </div>
+                  </div>
+              </div>
+          </div>
+        </div>
+        <div id="idBook" class="w3-modal w3-animate-opacity">
+            <div class="w3-modal-content w3-card-8">
+                <div class="w3-container w3-teal">
+                  <div class="right-side">
+                    <span class="w3-closebtn animate-opacity-close">&times;</span>
+                    <div class="project-description"><h1>MALCOLM GLADWELL <br>BOOK COVERS</h1>
+                      <p>After exploring and iterating upon many ideas I figured out I wanted to create something
+                        both interesting and conceptual. I looked towards swiss design from the mid-century and began
+                        to explore how I could communicate abstract concepts embedded within the books through form, shape, and color.
+                        <br><br>
+                        The red dot you see in the same location on every book is symbolic of the individuals within society who make key differences in each
+                        of the novels. The lines are representative of the different psychological worlds around them that Malcolm Gladwell explores in his writing.
+                    </div>
+                  </div>
+                    <!--style.display=none is the abrupt change in opacity that needs fixed -->
+                    <div class="books content">
+                      <img src="img/series.png">
+                      <img src="img/Outliers.png">
+                      <img src="img/Blink.png">
+                      <img src="img/Tipping.png">
+                      <div class='comps'>
+                        <span class="Vtitle">PROCESS</span>
+                        <span><p>Thumbnails</p></span>
+                        <img src="img/thumbBook-01.png">
+                        <span><p>Comps</p></span>
+                        <img src="img/thumbBook-02.png">
+                      </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="idPSA" class="w3-modal w3-animate-opacity">
+            <div class="w3-modal-content w3-card-8">
+                <div class="w3-container w3-teal">
+                    <span class="w3-closebtn animate-opacity-close"><div class="x">&times;</div></span>
+                    <!--style.display=none is the abrupt change in opacity that needs fixed -->
+                    <div class="video">
+                        <!-- <div class="video-frame"> -->
+                        <div class='embed-container'> <iframe id="frame2" src='https://player.vimeo.com/video/200674041?api=1&player_id='frame2'' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                            <div class="video-info">
+                                <div class="Vtitle">PSA- UCAIR</div>
+                                <div class="video-description">
+                                    <div class="copy">A public service announcement intended for the population of Utah with regards to improving the quality of air</div>
+                                </div>
+                                <div class="thumbnails">
+                                    <p>Storyboard Sketches-</p>
+                                    <div class="thumb-top"><img src="img/psathumb.png"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- </div> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="idCity" class="w3-modal w3-animate-opacity">
+            <div class="w3-modal-content w3-card-8">
+                <div class="w3-container w3-teal">
+                    <span class="w3-closebtn animate-opacity-close"><div class="x">&times;</div></span>
+                    <!--style.display=none is the abrupt change in opacity that needs fixed -->
+                    <div class="video">
+                        <!-- <div class="video-frame"> -->
+                        <div class='embed-container'> <iframe id="frame" src='http://player.vimeo.com/video/199114019?api=1&player_id='frame'' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                            <div class="video-info">
+                                <div class="Vtitle">CITY LIFE</div>
+                                <div class="video-description">
+                                    <div class="copy">A short stop motion animation showcasing the cycle of an urban artist</div>
+                                </div>
+                                <div class="thumbnails">
+                                    <p>Storyboard Sketches-</p>
+                                    <div class="thumb-top"><img src="img/thumbnail1.png"></div>
+                                    <div class="thumb-bottom"><img src="img/thumbnail2.png"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- </div> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="idJobs" class="w3-modal w3-animate-opacity">
+            <div class="w3-modal-content w3-card-8">
+                <div class="w3-container w3-teal">
+                    <span class="w3-closebtn animate-opacity-close"><div class="x">&times;</div></span>
+                    <!--style.display=none is the abrupt change in opacity that needs fixed -->
+                    <div class="video">
+                        <!-- <div class="video-frame"> -->
+                        <div class='embed-container'> <iframe id="frame1" src='https://player.vimeo.com/video/199811481?api=1&player_id='frame1'' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                            <div class="video-info">
+                                <div class="Vtitle">BICYCLE FOR OUR MINDS</div>
+                                <div class="video-description">
+                                    <div class="copy">A kinetic typography piece created from an interview with the late Steve Jobs in 1990</div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- </div> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="component app" style="height:100%; width: 100%;">
+            <div class="pages" style="width: 100%;">
+              <div class="tw">
+                  <span class="description" style="text-align: center;">
+                    <img src="img/tylercwats-08.svg" style="height:120px;" alt="TW"/>
+                    <div class= "designer">TYLER WATSON</div>
+                  </span>
+              </div>
+                <div class="info">
+                    <div class="nav">
+                        <a class="hvr-float" onclick="document.getElementById('idAbout').style.display='block'" href="#about"><span>ABOUT</span></a>
+                        <a class="hvr-float" href="mailto:me@tylerwatson.design.com" target="blank"><span>CONTACT</span></a>
+                        <a class="hvr-float" href="https://www.linkedin.com/in/tyler-watson-7a439aab" target="_blank" ><span>LINKEDIN</span></a>
+                    </div>
+                </div>
+                <div class="page">
+                    <div class="component home animationIn">
+                        <div class="project-list" style="transform: translate3d(0%, 0px, 0px);">
+                            <a href="#" onclick="document.getElementById('idEET').style.display='block'" class="EET component project-item animationIn">
+                                <!-- <span class="title">EET</span> -->
+                            </a>
+                            <a onclick="document.getElementById('idPSA').style.display='block'; $f($('#frame2')[0]).api('play'); $f($('#frame1')[2]).api('setVolume',.4);" class="PSA component project-item animationIn">
+                                <!-- <span class="title">UCAIR PSA</span> -->
+                            </a>
+                        </div>
+                        <div class="project-list" style="transform: translate3d(0%, 0px, 0px);">
+                            <a onclick="document.getElementById('idHS').style.display='block'" class="highs component project-item animationIn">
+                              <span class="title">
+                                <!-- HIGHSNOBIETY<br>REDESIGN -->
+                              </span>
+                            </a>
+                            <a href="#citylife" onclick="document.getElementById('idCity').style.display='block'; $f($('#frame')[0]).api('play'); $f($('#frame')[0]).api('setVolume',.4);" class="city component project-item animationIn">
+                              <!-- onclick creates modal and automatically plays the video nested inside along with setting the volume to 40%  -->
+                                <span class="title">
+                                  <!-- CITY LIFE <br/> STOP MOTION -->
+                                </span>
+                            </a>
+                        </div>
+                        <div class="project-list" style="transform: translate3d(0%, 0px, 0px);">
+                            <a href="#books" onclick="document.getElementById('idBook').style.display='block'" class="books component project-item animationIn"><span class="title">
+                              <!-- MALCOLM GLADWELL<br>SERIES -->
+                            </span></a>
+                            <a href="#stevejobs" onclick="document.getElementById('idJobs').style.display='block'; $f($('#frame1')[0]).api('play'); $f($('#frame1')[0]).api('setVolume',.4);"class="jobs component project-item animationIn">
+                              <span class="title">
+                                <!-- BICYCLE FOR OUR MINDS<br/> KINETIC TYPE -->
+                              </span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+
+</html>
